# ROS_Dynamic_Navigation_Auto_Rescue_car

./: LICENSE  README.md
src/: ROS常用功能命令6.0.txt
src/turn_on_wheeltec_robot/launch/: robot_model_visualization.launch  wheeltec_camera.launch  wheeltec_lidar.launch
src/turn_on_wheeltec_robot/params_costmap_car/param_mini_omni/: costmap_car_params.yaml
src/ultralytics/: test.py  test0.py  test0copy.py  testsender.py
src/ultralytics/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/ultralytics/examples/YOLOv8-OpenCV-ONNX-Python/: main.py
src/ultralytics/msg/: pointss.msg
src/wheeltec_robot_rc/: CMakeLists.txt  package.xml
src/wheeltec_robot_rc/launch/: keyboard_teleop.launch
src/wheeltec_robot_rc/scripts/: get_location.sh  mark_move.py  run_task.py  test.py  turtlebot_teleop_key.py
